--- a/PlaceFinder/AndroidManifest.xml
+++ b/PlaceFinder/AndroidManifest.xml
@@ -8,6 +8,10 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="8" />
 
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
     <permission
         android:name="com.tutos.android.gmapv2.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
@@ -34,13 +38,15 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.nerdesign.placefinder.GoogleMapActivity"
+            android:name="com.nerdesign.placefinder.ChoiceActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name="com.nerdesign.placefinder.GoogleMapActivity" >
         </activity>
 
         <meta-data
